# scala-pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: sbt_fatal_warnings.py  sbt_runner.py  sbt_scalafmt.py  sbt_scalastyle.py  sbt_scapegoat.py
