[metadata]
name = pre_commit_hooks
version = 0.1.0

[options]
packages = find:
install_requires =
    colorama
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sbt-fatal-warnings = pre_commit_hooks.sbt_fatal_warnings:main
    scalafmt = pre_commit_hooks.sbt_scalafmt:main
    scalastyle= pre_commit_hooks.sbt_scalastyle:main
    scapegoat = pre_commit_hooks.sbt_scapegoat:main